<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about">About</string>
    <string name="app_name">Stew</string>
    <string name="app_url">stew-app.soup.io</string>
    <string name="domain_suffix">.soup.io</string>
    <string name="forbidden">Your session expired, please log in again</string>
    <string name="headline">A simple soup.io app</string>
    <string name="invalid_credentials">Invalid username/password, please try again</string>
    <string name="loading">Loading…</string>
    <string name="loading_with_retry">Retrying (%1$d left)…</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="logging_in">Logging in…</string>
    <string name="network_error">Oops, there seems to be a problem with your connection to soup.io: %1$s</string>
    <string name="passwordHint">Enter your password</string>
    <string name="friends">Friends</string>
    <string name="fof">FoF</string>
    <string name="everyone">Everyone</string>
    <string name="me">My soup</string>
    <string name="repost">Repost</string>
    <string name="reposted">Reposted</string>
    <string name="reposting">Reposting…</string>
    <string name="userNameHint">username</string>
    <string name="version">Version %1$s</string>
    <string name="retry">Retry</string>
    <string name="other_content_type">Unsupported content type, tap to view in browser</string>
</resources>
