<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/friends"
        android:enabled="true"
        android:icon="@android:drawable/star_big_off"
        android:title="@string/friends" />

    <item
        android:id="@+id/fof"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/fof" />

    <item
        android:id="@+id/everyone"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/everyone" />

    <item
        android:id="@+id/me"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/me" />

    <item
        android:id="@+id/about"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about" />

</menu>