<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:padding="16dp"
        android:src="@drawable/logo"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="username"
            android:gravity="right"
            android:hint="@string/userNameHint"
            android:inputType="textNoSuggestions"
            android:textColorHint="@color/light_gray"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/domain_suffix"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/dark_gray" />

    </LinearLayout>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:textColorHint="@color/light_gray" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:enabled="false"
        android:padding="16dp"
        android:text="@string/log_in"
        android:textSize="18sp" />

</LinearLayout>